# vibe-kit

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  VIBE_MEMORY.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: docs.yml  release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
docs/: README.md  index.md  installation.md  local-development.md  quickstart.md  upgrade.md  vibe-vs-spec.md
memory/: vibe-context.md  vibe-guidelines.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-task.sh  setup-vibe.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-task.ps1  setup-vibe.ps1  update-agent-context.ps1
src/vibe_cli/: __init__.py
templates/: agent-context-template.md  checklist-template.md  insight-template.md  plan-template.md  tasks-template.md
templates/commands/: clarify.md  execute.md  insight.md  plan.md  review.md  tasks.md
