[project]
name = "vibe-cli"
version = "0.1.0"
description = "VibeCoder CLI - AI workflow tool for vibe coders. Plans, tasks, insights, and confidence scoring."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
vibe = "vibe_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_cli"]
