[project]
name = "vibe-cli"
version = "0.1.1"
description = "VibeCoder CLI - Flow-first AI development toolkit. Plan in phases, score confidence, execute fast."
authors = [
    { name = "VibeCoder Team", email = "team@vibekit.dev" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "ai",
    "development",
    "cli",
    "vibe",
    "confidence",
    "planning",
    "execution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[socks]>=0.24.0",
    "platformdirs>=4.0.0",
    "readchar>=4.0.0",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Repository = "https://github.com/vibe-meth/vibe-kit"
Documentation = "https://github.com/vibe-meth/vibe-kit/blob/main/docs"
Issues = "https://github.com/vibe-meth/vibe-kit/issues"
Discussions = "https://github.com/vibe-meth/vibe-kit/discussions"
Changelog = "https://github.com/vibe-meth/vibe-kit/blob/main/CHANGELOG.md"

[project.scripts]
vibe = "vibe_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_cli"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/vibe_cli --cov-report=term-missing"
